2005-01-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Slightly rearrange order of functions, for clarity;
	expand documentation of inject_package.
	
2005-01-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Add documentation
	
2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Disallow bootstrapping with perl 5.8.4

2005-01-22  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm:  Allow bootstrapping with perl 5.8.6 (maybe).

2005-01-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2004-12-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: fix error which prevented &enforce_gcc from working
	properly on 10.2.
	* Configure.pm: existing users who run "fink configure" get a default
	answer of "no" for the UseBinaryDist question.

2004-12-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: recognize 10.3.7

2004-12-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm, PkgVersion.pm, Services.pm: Move the code which
	verifies that the gcc version is correct to a new &enforce_gcc
	function in Services.pm.  Make sure that this function does what
	we want it to do for future versions of OS X.

2004-12-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Allow bootstrap under gcc 4.0

2004-12-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm, Engine.pm, Package.pm PkgVersion.pm, SelfUpdate.pm: 
	Refactor 'UseBinaryDist' to use a new binary_requested function
	which takes into account the per-package -b and -c flags as well
	as the global UseBinaryDist option.
	* Bootstrap.pm: Disable 'UseBinaryDist' during bootstrap
	* Configure.pm: Set 'UseBinaryDist' to be false if we are not 
	installed in /sw

2004-11-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Don't automatically update gettext-bin
	
2004-11-10  Daniel Macks  <dmacks@netspace.org>
