@@ -1,3 +1,7 @@
+2005-01-31  Justin F. Hallett  <thesin@users.sourceforge.net>
+
+	* VirtPackage.pm: Added Growl virtual pkg
+
 2005-01-30  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* Bootstrap.pm:  Slightly rearrange order of functions, for clarity;
